tests/paczka1/small_fuzzy/53917044.err
Error in line 3: eOW2 S67 91,6
Error in line 1: YkfxuIXkp7 A547 47,7
Error in line 2: NBb9f S67 66,1
